1999-03-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkstyle.c (gtk_default_draw_handle): Significantly reduced
	the number of calls to gdk_draw_point() (and thus to X) by
	clipping the points by hand.

	* gtk/gtkhandlebox.c (draw_textured_frame): Actually make use of
	the clip parameter.
	(gtk_handle_box_paint): Only paint the handle if the expose area
	intersects it.

Sun Mar  7 18:46:37 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkmain.c (add_dll_suffix): Add this function (OS/2 ver.)

Sun Mar  7 11:43:34 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkthemes.c (gtk_theme_engine_get): Add OS/2 changes.
	Added function gen_8_3_dll_name(gchar *name, gchar *fullname).

Fri Mar  5 09:12:24 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gtk/gtkitemfactory.c (gtk_item_factory_parse_rc): Open file in
	 textmode (O_TEXT) for OS/2 version.

Sun Feb 28 16:46:02 1999  Stefan Jeske  <stefan@gtk.org>

	* gtk/gtkspinbutton.[c,h] gtk/testgtk.c: Added two new signals to 
	GtkSpinButton, "input" and "output", to make the output more flexible.
 	The user has to provide a mapping between adjustment->value and the
 	output string (and vice versa, if the spin button is editable). 
	See testgtk for examples.

Sat Feb 27 01:18:47 1999  Tim Janik  <timj@gtk.org>

	* ChangeLog: moved old ChangeLog to ChangeLog.pre-1-2, and started
	new one.
	
	* configure.in: set gtk+ version to 1.3.0.